--- a/_includes/metadata.html
+++ b/_includes/metadata.html
@@ -112,6 +112,10 @@
         {%- capture link -%}https://twitter.com/{{ site.twitter_username }}{%- endcapture -%}
         {%- assign sameaslinks = sameaslinks | push: link -%}
     {%- endif -%}
+    {%- if site.bluesky_username -%}
+        {%- capture link -%}https://bluesky.com/{{ site.bluesky_username }}{%- endcapture -%}
+        {%- assign sameaslinks = sameaslinks | push: link -%}
+    {%- endif -%}
     {%- if site.medium_username -%}
         {%- capture link -%}https://medium.com/@{{ site.medium_username }}{%- endcapture -%}
         {%- assign sameaslinks = sameaslinks | push: link -%}
