--- a/_includes/social.html
+++ b/_includes/social.html
@@ -40,6 +40,11 @@
             {%- if site.twitter_username -%}
             <a href="https://twitter.com/{{ site.twitter_username }}" title="Twitter"><i class="fab fa-twitter"></i></a>
             {% endif %}
+			{% if site.bluesky_username %}
+			<a href="https://bsky.app/profile/{{ site.bluesky_username }}" target="_blank">
+ 			<img src="{{ site.baseurl }}/assets/img/bluesky.png" alt="Bluesky" style="width: 24px; height: 24px;">
+			</a>
+			{% endif %}
             {%- if site.mastodon_username -%}
             <a rel="me" href="https://{{ site.mastodon_username  }}" title="Mastodon"><i class="fab fa-mastodon"></i></a>
             {% endif %}
